files/envoy.yaml
static_resources:
  listeners:
  - name: tce-installer
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          request_timeout: 0s
          request_headers_timeout: 0s
          use_remote_address: true
          codec_type: HTTP1
          server_header_transformation: PASS_THROUGH
          upgrade_configs:
          - upgrade_type: websocket
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: app
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: service-http
                  timeout: 0s
                  idle_timeout: 0s
                  auto_host_rewrite: true
                  prefix_rewrite: "/"  
                  internal_redirect_policy:
                    max_internal_redirects: 5
                  upgrade_configs:
                    - upgrade_type: websocket
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain: {filename: "/etc/ssl/certs/tce-demo-chain.pem"}
              private_key: {filename: "/etc/ssl/private/tce-demo-nginx.key"}
  clusters:
  - name: service-http
    connect_timeout: 10s
    lb_policy: ROUND_ROBIN
    common_http_protocol_options:
      idle_timeout: 30s
    load_assignment:
      cluster_name: service-http
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 5555
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 10002
